<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HorsesList"
    android:orientation="vertical">

    <Button
        android:id="@+id/horse1"
        android:text="@string/Horse_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/horse2"
        android:text="@string/Horse_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/horse3"
        android:text="@string/Horse_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"/>

</LinearLayout>